[package]
name = "cennznut"
version = "0.2.0"
authors = ["Centrality Developers <developers@centrality.ai>"]
edition = "2018"

[dependencies]
bit_reverse = { version = "0.1.8", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0" }
pact = { branch = "0.1.0", git = "https://github.com/cennznet/pact" }

[features]
default = [ "std" ]
std = [
  "codec/std"
]
