[package]
name = "cennznut"
version = "0.1.1"
authors = ["Centrality Developers <developers@centrality.ai>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false }
pact = { branch = "0.1.0", git = "https://github.com/cennznet/pact", default-features = false }

[features]
default = [ "std" ]
std = [
  "codec/std",
  "pact/std",
]