[package]
 name = "js"
 version = "0.0.1"
 authors = ["Centrality Developers <developers@centrality.ai>"]
 edition = "2018"
 description = "JS/Wasm bindings for the rust Cennznut codec"
 license = "UNLICENSED"
 repository = "https://github.com/cennznet/cennznut-rs"

 [lib]
 crate-type = ["cdylib"]

 [dependencies]
 cennznut = { path = "../" }
 wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"]  }
 clear_on_drop = { version = "0.2.3", features = ["no_cc"] }
 parity-scale-codec = { version = "^1.3.0", features = ["derive"] }
 pact = { branch = "0.1.0", git = "https://github.com/cennznet/pact", default-features = false }
 serde = { version = "1.0.101", features = ["derive"] }

 [profile.release]
 # disable loop vectorization for smaller wasm
 opt-level = "z"
 # disable parallel compilation
 codegen-units = 1
 lto = true